--- a/app/src/main/res/layout/fragment_transaction_confirm.xml
+++ b/app/src/main/res/layout/fragment_transaction_confirm.xml
@@ -36,15 +36,15 @@
                 android:padding="@dimen/space_8">
 
                 <android.support.v7.widget.CardView
+                    android:layout_marginTop="@dimen/space_3"
                     android:id="@+id/view2"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:elevation="12dp"
+                    android:elevation="6dp"
                     app:cardBackgroundColor="@color/circular_bg"
                     app:cardCornerRadius="32dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_goneMarginTop="@dimen/space_8">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
                         android:id="@+id/ivProfile"
