--- a/app/src/main/res/layout/row_confirm_order.xml
+++ b/app/src/main/res/layout/row_confirm_order.xml
@@ -88,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:text="@string/start_date_"
+            android:layout_marginStart="@dimen/space_4"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
             android:visibility="@{widget.hasSIP}"
@@ -119,6 +120,7 @@
             android:fontFamily="@font/lato_semibold"
             android:gravity="start|center_vertical"
             android:onClick="@{onCheckedChange}"
+            android:layout_marginStart="@dimen/space_4"
             android:padding="@dimen/space_8"
             android:text="@string/first_installment_of_sip_on_toady"
             android:textColor="@color/darker_gray"
