--- a/app/src/main/res/layout/row_transaction_list_status.xml
+++ b/app/src/main/res/layout/row_transaction_list_status.xml
@@ -30,32 +30,33 @@
 
             <ImageView
                 android:id="@+id/imgStatus"
+                imgUrl="@{widget.actualStatusIcon}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                imgUrl="@{widget.actualStatusIcon}"
+                android:layout_gravity="center_horizontal"
                 tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
-            <View
+            <org.supportcompact.widgets.DottedLine
                 android:id="@+id/verticalDivider"
-                android:layout_width="1dp"
+                android:layout_width="2dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@color/lighter_gray" />
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:paddingBottom="@dimen/space_8"
             android:id="@+id/llDesc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:orientation="vertical"
+            android:paddingBottom="@dimen/space_8"
             app:layout_constraintEnd_toStartOf="@+id/tvStatus"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imgTimeline"
             app:layout_constraintTop_toTopOf="@id/tvStatus">
+
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
@@ -64,6 +65,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
                 tools:text="saafafafaffffffffffffffffff" />
+
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
@@ -75,22 +77,22 @@
 
         <TextView
             android:id="@+id/tvStatus"
+            background="@{widget.actualStatusDrawable}"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            background="@{widget.actualStatusDrawable}"
+            android:elevation="@dimen/space_2"
+            android:gravity="center"
             android:paddingStart="@dimen/space_12"
             android:paddingTop="@dimen/space_4"
             android:paddingEnd="@dimen/space_12"
-            android:gravity="center"
-            tools:text="In Progress"
-            android:elevation="@dimen/space_2"
             android:paddingBottom="@dimen/space_4"
             android:text="@{widget.actualStatus}"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="In Progress" />
 
     </android.support.constraint.ConstraintLayout>
 
