--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -21,11 +21,23 @@
             android:id="@+id/signPad"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/space_8"
             android:background="@color/white"
-            app:layout_constraintBottom_toTopOf="@id/btnClear"
+            app:layout_constraintBottom_toTopOf="@id/tvAlert"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvAlert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/_8sdp"
+            android:text="@string/please_make_sure_your_signature_is_accurate_take_your_time_to_get_your_signature_right_before_submitting"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toTopOf="@id/btnClear"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signPad" />
 
         <ImageView
             android:id="@+id/ivClose"
@@ -41,10 +53,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_2"
             android:background="@drawable/shape_btn_idle_bg"
             android:text="@string/clear_pad"
             android:textColor="@color/white"
-            android:layout_marginBottom="@dimen/space_2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnContinue"
             app:layout_constraintHorizontal_weight="1"
@@ -55,12 +67,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_8"
+            android:layout_marginBottom="@dimen/space_2"
             android:alpha="@{vm.alpha}"
             android:background="@drawable/shape_btn_idle_bg"
             android:enabled="@{vm.isEdit()}"
             android:text="@string/save_signature"
             android:textColor="@color/white"
-            android:layout_marginBottom="@dimen/space_2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
