--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,8 @@
         <item name="android:fontFamily">@font/lato_semibold</item>
     </style>
 
+    <style name="UCropTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/red</item>
+    </style>
+
 </resources>
