--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -23,9 +23,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/default_space"
-                android:paddingEnd="@dimen/default_space">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/tvGoal"
@@ -33,6 +31,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:background="@drawable/shape_cart_view"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
                     android:elevation="2dp"
                     android:lineSpacingExtra="4dp"
                     android:padding="8dp"
@@ -48,6 +48,8 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginBottom="@dimen/default_space"
                     android:background="@drawable/shape_cart_view"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
                     android:elevation="2dp"
                     android:padding="@dimen/space_4"
                     android:visibility="gone"
