--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -348,20 +348,12 @@
                     android:id="@+id/rvHomeItem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_space"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/default_space"
                     android:visibility="invisible"
-                    app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/llWhyTarrakki"
-                    tools:background="@drawable/shape_cart_view"
-                    tools:elevation="2dp"
-                    tools:itemCount="1"
-                    tools:listitem="@layout/row_section_investment_item"
-                    tools:padding="8dp" />
+                    tools:listitem="@layout/row_section_investment_item" />
 
                 <Button
                     android:id="@+id/btnIdle"
