--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -263,7 +263,6 @@
 
                 </LinearLayout>
 
-
                 <ImageView
                     android:id="@+id/ivExClp"
                     android:layout_width="wrap_content"
@@ -283,18 +282,9 @@
                     android:id="@+id/rvFunds"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/default_space"
-                    android:paddingTop="@dimen/space_8"
-                    android:paddingEnd="@dimen/default_space"
-                    android:paddingBottom="@dimen/space_8"
-                    app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     tools:itemCount="2"
-                    tools:listitem="@layout/row_fund_list_item"
-                    tools:paddingBottom="0dp"
-                    tools:paddingEnd="0dp"
-                    tools:paddingStart="0dp"
-                    tools:paddingTop="0dp" />
+                    tools:listitem="@layout/row_fund_list_item" />
 
                 <ProgressBar
                     android:id="@+id/pbLoadMore"
