--- a/app/src/main/res/layout/row_investment_list_item.xml
+++ b/app/src/main/res/layout/row_investment_list_item.xml
@@ -14,8 +14,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:background="@drawable/shape_section_item_bg"
-        android:elevation="2dp">
+        android:background="@drawable/shape_section_item_bg">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
