--- a/app/src/main/res/layout/dialog_redeem_portfolio.xml
+++ b/app/src/main/res/layout/dialog_redeem_portfolio.xml
@@ -70,6 +70,8 @@
             android:maxLines="1"
             android:paddingStart="@dimen/default_space"
             android:paddingTop="@dimen/space_8"
+            android:drawableStart="@drawable/ic_folio_number"
+            android:drawablePadding="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
             android:text="@={folio}"
@@ -86,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
-            android:text="Total Invested Amount"
+            android:text="Total Current Value"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
