--- a/app/src/main/res/layout/fragment_direct_investment.xml
+++ b/app/src/main/res/layout/fragment_direct_investment.xml
@@ -32,7 +32,7 @@
             <TextView
                 android:visibility="@{vm.isDirectEmpty==true?View.VISIBLE:View.GONE}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:text="@string/data_not_found"
+                android:text="@string/no_funds_found"
                 android:layout_width="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_height="wrap_content" />
