--- a/app/src/main/res/layout/fragment_goal_based_investment.xml
+++ b/app/src/main/res/layout/fragment_goal_based_investment.xml
@@ -31,7 +31,7 @@
             <TextView
                 android:visibility="@{vm.isGoalEmpty==true?View.VISIBLE:View.GONE}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:text="@string/data_not_found"
+                android:text="@string/no_goals_found"
                 android:layout_width="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_height="wrap_content" />
