--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -66,63 +66,30 @@
                     android:textColorHint="@color/darker_gray"
                     app:layout_constraintTop_toBottomOf="@id/tvFName" />
 
-                <!--<TextView
-                    android:id="@+id/tvDOBL"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_4"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/date_of_birth_"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    app:layout_constraintEnd_toStartOf="@id/tvPAN"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
-
-                <TextView
-                    android:id="@+id/edtDOB"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_4"
-                    android:layout_marginEnd="@dimen/space_4"
-                    android:background="@drawable/shape_edt_gray_round"
-                    android:drawableEnd="@drawable/ic_calendar"
-                    android:hint="@string/date_of_birth_"
-                    android:maxLines="1"
-                    android:paddingStart="@dimen/default_space"
-                    android:paddingTop="@dimen/space_8"
-                    android:paddingEnd="@dimen/default_space"
-                    android:paddingBottom="@dimen/space_8"
-                    android:text="@={kycData.dob}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/darker_gray"
-                    app:layout_constraintEnd_toStartOf="@id/edtPAN"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvDOBL" />-->
-
                 <TextView
                     android:id="@+id/tvPAN"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="8dp"
                     android:text="@string/pan_number"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@+id/tvDOBL"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvDOBL"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtFName" />
 
                 <EditText
                     android:id="@+id/edtPAN"
                     isPANCard="@{true}"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
+                    android:layout_marginEnd="@dimen/space_4"
+                    android:alpha="0.8"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
+                    android:enabled="false"
                     android:hint="@string/pan_number"
                     android:inputType="textCapCharacters"
                     android:maxLength="10"
@@ -134,10 +101,46 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toStartOf="@id/edtDOB"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvPAN" />
+
+                <TextView
+                    android:id="@+id/tvDOBL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_4"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/date_of_birth_"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toEndOf="@id/edtDOB"
-                    app:layout_constraintTop_toBottomOf="@id/tvPAN" />
+                    app:layout_constraintStart_toEndOf="@+id/tvPAN"
+                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
+
+                <TextView
+                    android:id="@+id/edtDOB"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_4"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@drawable/shape_edt_gray_round"
+                    android:drawableEnd="@drawable/ic_calendar"
+                    android:hint="@string/date_of_birth_"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={kycData.guardianDOB}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toEndOf="@id/edtPAN"
+                    app:layout_constraintTop_toBottomOf="@id/tvDOBL" />
 
 
                 <TextView
@@ -155,9 +158,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
+                    android:alpha="0.8"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
+                    android:enabled="false"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -199,7 +202,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="0.4"
+                    android:alpha="0.8"
                     android:background="@drawable/shape_edt_gray_round"
                     android:enabled="false"
                     android:hint="@string/mobile_number"
@@ -249,7 +252,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
+                    android:alpha="0.4"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:enabled="false"
                     android:hint="@string/name_of_guardian"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
