1 Worked on image processing issue of signed image. 2 Implemented transaction status in progress transaction.

--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -17,7 +17,7 @@
         android:padding="@dimen/default_space"
         tools:context=".module.ekyc.SignatureActivity">
 
-        <com.williamww.silkysignature.views.SignaturePad
+        <com.tarrakki.signaturepad.SignaturePad
             android:id="@+id/signPad"
             android:layout_width="match_parent"
             android:layout_height="0dp"
