--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,9 +47,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:visibility="@{vm.portfolioVisibility}"
-                    app:cpb_background_progressbar_color="#2E1D3E"
-                    app:cpb_background_progressbar_width="8dp"
-                    app:cpb_progressbar_color="@color/colorAccent"
+                    returnpercentage="@{vm.portfolioDetails.totalReturnPercentage}"
                     app:cpb_progressbar_width="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/homeView"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -59,39 +57,38 @@
 
                 <TextView
                     android:id="@+id/tvPortfolio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="136dp"
+                    android:layout_height="15dp"
                     android:gravity="center"
                     android:minWidth="140dp"
                     android:text="@string/portfolio_value"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/home_title_color"
+                    app:layout_constraintEnd_toEndOf="@+id/cpPortfolio"
+                    app:layout_constraintStart_toStartOf="@+id/cpPortfolio"
                     android:visibility="@{vm.portfolioVisibility}"
                     app:layout_constraintBottom_toBottomOf="@+id/homeView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.135"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.3" />
 
                 <TextView
                     android:id="@+id/tvPortfolioValue"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:fontFamily="@font/lato_bold"
                     android:gravity="center"
-                    android:minWidth="140dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/white"
                     android:visibility="@{vm.portfolioVisibility}"
                     app:anim="@{true}"
                     app:layout_constraintBottom_toBottomOf="@+id/homeView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.135"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/cpPortfolio"
+                    app:layout_constraintStart_toStartOf="@+id/cpPortfolio"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.45"
-                    app:price="@{0}"
+                    app:price="@{vm.portfolioDetails.currentValue}"
                     tools:text="@string/dummy" />
 
                 <TextView
@@ -134,7 +131,7 @@
 
                 <TextView
                     android:id="@+id/tvTotalInvestmentValue"
-                    price="@{0}"
+                    app:price="@{vm.portfolioDetails.totalInvestment}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -171,7 +168,7 @@
                     app:anim="@{true}"
                     app:layout_constraintStart_toEndOf="@id/guideline"
                     app:layout_constraintTop_toBottomOf="@+id/tvTotalReturn"
-                    app:returns="@{0}"
+                    app:returns="@{vm.portfolioDetails.totalReturn}"
                     tools:text="@string/dummy2" />
 
                 <TextView
@@ -179,11 +176,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:text="(+0%)"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/colorAccent"
-                    android:visibility="@{vm.portfolioVisibility}"
                     app:layout_constraintStart_toEndOf="@id/guideline"
                     app:layout_constraintTop_toBottomOf="@+id/tvTotalReturnValue" />
 
