--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -7,6 +7,8 @@
 
         <import type="android.view.View"/>
 
+        <import type="android.text.TextUtils"/>
+
         <variable
             name="vm"
             type="com.tarrakki.module.myprofile.MyProfileVM" />
@@ -122,7 +124,7 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/pan_number"
-                    android:visibility='@{vm.PANNumber.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.PANNumber)?View.GONE:View.VISIBLE}'
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -137,7 +139,7 @@
                     android:focusable="false"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
-                    android:visibility='@{vm.PANNumber.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.PANNumber)?View.GONE:View.VISIBLE}'
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
@@ -153,7 +155,7 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/pan_name"
-                    android:visibility='@{vm.PANName.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.PANName)?View.GONE:View.VISIBLE}'
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -172,7 +174,7 @@
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
                     android:text="@={vm.PANName}"
-                    android:visibility='@{vm.PANName.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.PANName)?View.GONE:View.VISIBLE}'
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray" />
@@ -240,7 +242,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/name_of_guardian"
-                    android:visibility='@{vm.guardian.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.guardian)?View.GONE:View.VISIBLE}'
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
                 <EditText
@@ -255,7 +257,7 @@
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
-                    android:visibility='@{vm.guardian.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.guardian)?View.GONE:View.VISIBLE}'
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
                     android:text="@={vm.guardian}"
@@ -268,7 +270,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:visibility='@{vm.guardianPANNumber.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.guardianPANNumber)?View.GONE:View.VISIBLE}'
                     android:text="@string/guardian_pan_number"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
@@ -283,7 +285,7 @@
                     android:focusableInTouchMode="false"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
-                    android:visibility='@{vm.guardianPANNumber.equals("")?View.GONE:View.VISIBLE}'
+                    android:visibility='@{TextUtils.isEmpty(vm.guardianPANNumber)?View.GONE:View.VISIBLE}'
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
