--- a/app/src/main/res/layout/row_order_total.xml
+++ b/app/src/main/res/layout/row_order_total.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
-            android:drawableEnd="@drawable/ic_edit"
+            android:drawableEnd="@drawable/ic_bank_mandate_edit"
             android:visibility="@{widget.isBankMandateVisible?View.VISIBLE:View.GONE}"
             android:gravity="center_vertical"
             android:onClick="@{onBankMandateChange}"
